--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-prettier": "^10.1.8",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "prettier": "^3.8.1",
     "radix-ui": "^1.4.3",
